...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDisplayPageActivity"
    android:id="@+id/profileDisplayActivity">

<!-- View for purple background -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
...
